k8s-manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskify-backend
  namespace: taskify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskify-backend
  template:
    metadata:
      labels:
        app: taskify-backend
    spec:
      containers:
      - name: backend
        image: thesanketpawar/taskify-backend:latest
        ports:
        - containerPort: 5000
