k8s-manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskify-frontend
  namespace: taskify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskify-frontend
  template:
    metadata:
      labels:
        app: taskify-frontend
    spec:
      containers:
      - name: frontend
        image: thesanketpawar/taskify-frontend:latest
        ports:
          - protocol: TCP
            port: 80
            targetPort: 80
            nodePort: 31365
