k8s-manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskify-backend-service
  namespace: taskify
spec:
  type: NodePort
  selector:
    app: taskify-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30005
