k8s-manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskify-frontend-service
  namespace: taskify
spec:
  type: NodePort
  selector:
    app: taskify-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31365
