k8s-manifests/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: taskify

spec:
  type: ExternalName
  externalName: 10.0.3.144
